--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "core-js": "^2.6.5",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
-    "express": "^4.16.4",
     "serve-static": "^1.13.2",
     "vue-template-compiler": "^2.5.21"
   }
